test/spec_vectors/simd_f32x4_arith/fail/module_6.wat
(module (func (result v128) (f32x4.mul (i32.const 0) (f32.const 0.0))))